apps/it-tools/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: it-tools
  labels:
    app.kubernetes.io/part-of: it-tools
    platform.mousses.xyz/admission: audit
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/audit-version: latest
    pod-security.kubernetes.io/warn: restricted
    pod-security.kubernetes.io/warn-version: latest
